# ai-whatsapp-intelligence

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml  final_report.md  fix_changelog.py  fix_changelog2.py  fix_conflicts.py  fix_lock.py  fix_warden.py  package-lock.json  patch.diff  patch_conflict.sh  resolve_warden.py  test_async_in_thread.py  test_celery_task_bug.py  test_db_mock.py  verify_fix.py
.jules/: bolt.md  warden.md
backend/: .env  README.md  benchmark_ai_concurrency.py  pyproject.toml  seed.py
backend/app/: main.py
backend/app/ai/: engine.py
backend/app/api/: auth.py  endpoints.py  schemas.py
backend/app/db/: chroma.py  database.py  models.py
backend/app/workers/: celery_config.py  tasks.py
backend/tests/: test_chroma.py  test_cors.py  test_dashboard.py  test_db.py  test_endpoints.py  test_endpoints_tuple_order.py  test_ingest.py  test_orm_bypass.py  test_security_config.py  test_tasks.py  test_workers.py
collector/: .env  package-lock.json  package.json
collector/src/: index.js  index.test.js
collector/test/: index.test.js
collector/tests/: index.test.js
